[package]
name = "juniper_actix"
version = "0.1.0"
authors = ["dakusuno <gareadio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.0.0"
actix-web = "3"
diesel = { version = "1.4.3", features = ["postgres", "r2d2","uuid","uuidv07"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
juniper = "0.15.6"
r2d2 = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"